--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
 
     <TextView
         android:id="@+id/team1TextView"
+        style="@style/AppButtonStyle"
         android:textColor="@color/scoreColor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
